Prevent overflow when dashboard is hidden.

--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ form:has(button[data-test="@web/Search/Microphone"]) input[inputmode="numeric"] 
 		height: 0;
 		opacity: 0;
 		pointer-events: none;
+		overflow: hidden;
 	}
 }
 
